Correcciones ortográficas y fotografías

--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
     <div class="row">
       <div class="col-md-4 lg-4 s-12 mb-4">
         <div class="card">
-          <img class="card-img-top" src="assets/speakers/abogado1.jpg"Card image cap">
+          <img class="card-img-top" src="assets/speakers/abogado2.jpg"Card image cap">
           <div class="card-body">
             <!-- <div class="badges">
               <span class="badge badge-warning">JavaScript</span>
               <span class="badge badge-info">React</span>
             </div> -->
             <h5 class="card-title mb-2">Jorge Oscar Aguilar Tellez.</h5>
-            <p class="card-text">Abogado egresado de la Benemérita Universidad Autónoma de Puebla, experiencia en juicios familiares, civiles y laborales, guiado siempre por dar un resultado adecuados a la necesidad de cada asesorado, resolviendo de la mejor manera y en el meno tiempo posible cualquier situación de carácter legal en el que se pueda ver inmerso</p>
+            <p class="card-text">Abogado egresado de la Benemérita Universidad Autónoma de Puebla, experiencia en juicios familiares, civiles y laborales, guiado siempre por dar un resultado adecuados a la necesidad de cada asesorado, resolviendo de la mejor manera y en el menor tiempo posible cualquier situación de carácter legal en el que se pueda ver inmerso</p>
             <h6>Licenciado en Derecho por la Benemérita Universidad Autónoma de Puebla</h6>
           </div>
         </div>
@@ -116,14 +116,14 @@
 
       <div class="col-md-4 lg-4 s-12 mb-4">
         <div class="card">
-          <img class="card-img-top" src="assets/speakers/abogado2.jpg" alt="Card image cap">
+          <img class="card-img-top" src="assets/speakers/abogado1.jpg" alt="Card image cap">
           <div class="card-body">
             <!-- <div class="badges">
               <span class="badge badge-warning">JavaScript</span>
               <span class="badge badge-info">Front-End Development</span>
             </div> -->
             <h5 class="card-title mb-2">Daniel Alonso Díaz Arellano</h5>
-            <p class="card-text">Abogado, maestro y candidato a doctor por la BUAP, especialista en Derecho Penal por el instituto de estudios judiciales del poder judicial del estado de Puebla. Funcionario público en el poder judiciales del estado de Puebla de 2010 a 2018. Actualmente docente, abogado litigante y socido fundador de despacho jurídico ETHIUS. Mi lema:
+            <p class="card-text">Abogado, maestro y candidato a doctor por la BUAP, especialista en Derecho Penal por el instituto de Estudios Judicial del Poder Judicial del Estado de Puebla. Funcionario Público en el poder judicial del Estado de Puebla de 2010 a 2018. Actualmente docente, abogado litigante y socido fundador de despacho jurídico ETHIUS. Mi lema:
             "Trabaja duro con disciplina y constancia. De esta manera, el éxito llega por añadidura".
             </p>
             <h6>Licenciado en Derecho por la Benemérita Universidad Autónoma de Puebla</h6>
@@ -171,7 +171,7 @@
     </div>
     <div class="col-12  col-lg-6 pt-2 pb-2 align-self-center">
       <h2>¿Qué hacemos?</h2>
-      <p>Nos dedicamos a ofrecer asesoría legal empresarial, coorporativo y litigios. Igualmente brindamos nuestro apoyo con juicios civiles, mercantiles, familiares, penales laborales y fiscales; Sin embargo lo que nos diferencia de los demás es neustra búsqueda continua de soluciones alternas a problemas legales.</p>
+      <p>Nos dedicamos a ofrecer asesoría legal empresarial, coorporativo y litigios. Igualmente brindamos nuestro apoyo con juicios civiles, mercantiles, familiares, penales laborales y fiscales; sin embargo lo que nos diferencia de los demás es nuestra búsqueda continua de soluciones alternas a problemas legales.</p>
       <a class="btn btn-outline-light" href=""> Conoce más</a>
     </div>
   </div>
