--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <header>
       <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container"> 
-        <a class="navbar-brand" href="#">
-              <!-- <img src="assets/images/logo.jpg" alt=""> -->
+        <a class="navbar-brand" href="index.html">
+               <img src="assets/images/PP.jpg" alt="logo">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,12 +28,11 @@
                 <a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#main">Link          
+                <a class="nav-link" href="#main">Servicios          
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-platzi" href="#main" data-toggle="modal"data-target="#modalCompra">Comprar tickets         
-                </a>
+                <a class="nav-link text-platzi" href="#main" data-toggle="modal"data-target="#modalCompra">Contactanos  </a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -101,7 +100,7 @@
     <div class="row">
       <div class="col-md-4 lg-4 s-12 mb-4">
         <div class="card">
-          <img class="card-img-top" src="assets/speakers/abogado2.jpg"Card image cap">
+          <img class="card-img-top" src="assets/speakers/abogado1.jpg"Card image cap">
           <div class="card-body">
             <!-- <div class="badges">
               <span class="badge badge-warning">JavaScript</span>
@@ -116,7 +115,7 @@
 
       <div class="col-md-4 lg-4 s-12 mb-4">
         <div class="card">
-          <img class="card-img-top" src="assets/speakers/abogado1.jpg" alt="Card image cap">
+          <img class="card-img-top" src="assets/speakers/abogado2.jpg" alt="Card image cap">
           <div class="card-body">
             <!-- <div class="badges">
               <span class="badge badge-warning">JavaScript</span>
