--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#main">Servicios          
+                <a class="nav-link" href="servicios.html">Servicios          
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-platzi" href="#main" data-toggle="modal"data-target="#modalCompra">Contactanos  </a>
               </li>
-              <li class="nav-item dropdown">
+              <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Dropdown
                 </a>
@@ -44,7 +44,7 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="#">Something else here</a>
                 </div>
-              </li>
+              </li> -->
             </ul>
             </div>
           </div>
@@ -217,6 +217,7 @@
       </div>
     </div>
   </div>
+  <br>
 </section>
 <!--/Convierte en Orador-->
 <!--footer-->
@@ -243,7 +244,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Comprar tickets</h5>
+        <h5 class="modal-title" id="exampleModalCenterTitle">Correo</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -267,7 +268,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-primary">Comprar</button>
+        <button type="button" class="btn btn-primary">Contactar</button>
       </div>
     </div>
   </div>
