Cambios a la página

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="col-md-6 offset-md-6 text-center text-md-right">
         <h1>Ethius</h1>
         <p class="d-none d-md-block">
-          Somos un despacho jurídico integrado por cinco abogados experimentos, trabajos día a día en conjunto para asesorar legalmente a nuestros clientes y poder encontrar soluciones alternas a sus problemas
+          En Ethius Jurídico contamos con un equipo de abogados especialistas en Derecho Civil y Mercantil, Derecho Fiscal y Derecho Penal.
         </p>
         <button type="button" class="btn btn-platzi" data-toggle="modal" data-target="#modalCompra">Contactanos</button>
       </div> 
@@ -100,15 +100,22 @@
     <div class="row">
       <div class="col-md-4 lg-4 s-12 mb-4">
         <div class="card">
-          <img class="card-img-top" src="assets/speakers/abogado2.jpg"Card image cap">
+          <img class="card-img-top" src="assets/speakers/.jpg"Card image cap">
           <div class="card-body">
             <!-- <div class="badges">
               <span class="badge badge-warning">JavaScript</span>
               <span class="badge badge-info">React</span>
             </div> -->
-            <h5 class="card-title mb-2">Jorge Oscar Aguilar Tellez.</h5>
-            <p class="card-text">Abogado egresado de la Benemérita Universidad Autónoma de Puebla, experiencia en juicios familiares, civiles y laborales, guiado siempre por dar un resultado adecuados a la necesidad de cada asesorado, resolviendo de la mejor manera y en el menor tiempo posible cualquier situación de carácter legal en el que se pueda ver inmerso</p>
+            <h5 class="card-title mb-2">Ana Lilia Pérez Muñoz</h5>
+            <p class="card-text">Abogado por la Universidad Autónoma    de   Puebla con enfoque en Derecho Fiscal.
+              Maestría en Derecho Fiscal por el Instituto de Especialización para Ejecutivos.
+              Experiencia profesional en Procuraduría de la Defensa del Trabajo Delegación Puebla.
+              Práctica legal en Tribunal Federal de Justicia Administrativa Salas Oriente y Norte.
+              Editor y coordinador del área legal de la revista de información fiscal fiscalia.com
+              Socio de ETHIUS jurídico
+              </p>
             <h6>Licenciado en Derecho por la Benemérita Universidad Autónoma de Puebla</h6>
+
           </div>
         </div>
       </div>
@@ -122,7 +129,7 @@
               <span class="badge badge-info">Front-End Development</span>
             </div> -->
             <h5 class="card-title mb-2">Daniel Alonso Díaz Arellano</h5>
-            <p class="card-text">Abogado, maestro y candidato a doctor por la BUAP, especialista en Derecho Penal por el instituto de Estudios Judicial del Poder Judicial del Estado de Puebla. Funcionario Público en el poder judicial del Estado de Puebla de 2010 a 2018. Actualmente docente, abogado litigante y socido fundador de despacho jurídico ETHIUS. Mi lema:
+            <p class="card-text">Abogado, maestro y candidato a doctor por la BUAP, especialista en Derecho Penal por el instituto de Estudios Judicial del Poder Judicial del Estado de Puebla. Funcionario Público en el poder judicial del Estado de Puebla de 2010 a 2018. Docente, abogado litigante y socido fundador de despacho jurídico ETHIUS. Mi lema:
             "Trabaja duro con disciplina y constancia. De esta manera, el éxito llega por añadidura".
             </p>
             <h6>Licenciado en Derecho por la Benemérita Universidad Autónoma de Puebla</h6>
@@ -139,13 +146,36 @@
               <span class="badge badge-info">Front-End Development</span>
             </div> -->
             <h5 class="card-titl mb-0">Valeria Fermoso Castillo</h5>
-            <p class="card-text">Abogada por la Benemérita Universidad Autónoma de Puebla y contadora en proceso por la
-              Universidad Nacional Autónoma de México; prácticas en el Poder Judicial del Estado, así como en
-              la Junta de Conciliación y Arbitraje. Constante actualización y aprendizaje en conferencias y
-              congresos en diversas Instituciones y Estados de la República, buscando crecer a la par que lo hace
-              el Derecho, que es cada vez más virtual, al igual que la sociedad. Gustosa del emprendimento y
-              del marketing.</p>
+            <p class="card-text">Abogado por la Universidad Autónoma de Puebla con enfoque en Derecho Fiscal.
+              Contador por la Universidad Nacional Autónoma de México (en curso) 
+              Experiencia profesional en Poder Judicial del Estado en las áreas Civil y Mercantil.
+              Práctica legal en materia laboral en la Junta de Conciliación y Arbitraje.
+              Socio de ETHIUS jurídico. Experiencia en la traducción de contratos y con gusto por el marketing digital
+              </p>
               <h6>Licenciada en Derecho por la Benemérita Universidad Autónoma de Puebla</h6>
+              <h6>Licenciada e Contaduría por la Univerisad Nacional Autónoma de México</h6>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 lg-4 s-12 mb-4">
+        <div class="card">
+          <img class="card-img-top" src="assets/speakers/.jpg" alt="Card image cap">
+          <div class="card-body">
+            <!-- <div class="badges">
+              <span class="badge badge-warning">JavaScript</span>
+              <span class="badge badge-info">Front-End Development</span>
+            </div> -->
+            <h5 class="card-titl mb-0">Aracely Galaviz Hernández</h5>
+            <p class="card-text">
+              Abogada por la Benemérita Universidad Autónoma de Puebla.
+              Experiencia en el Servicio Público: Dirección de Comercio Exterior Puebla y en el Instituto Nacional de Migración. 
+              Estancia en Los Ángeles, California, EEUU, cursos del idioma inglés. Nivel Conversacional de Inglés.
+              Experiencia en asesoría integral para extranjeros y mexicanos con doble nacionalidad. 
+              </p>
+              <h6>Licenciada en Derecho por la Benemérita Universidad Autónoma de Puebla</h6>
+              <h6>Estancia en Los Ángeles, California, EEUU, cursos del idioma inglés. Nivel Conversacional de Inglés.</h6>
+              <h6>Experiencia en asesoría integral para extranjeros y mexicanos con doble nacionalidad </h6>
           </div>
         </div>
       </div>
@@ -169,8 +199,9 @@
       <img src="assets/images/justice.jpg" alt="Honolulu"> 
     </div>
     <div class="col-12  col-lg-6 pt-2 pb-2 align-self-center">
-      <h2>¿Qué hacemos?</h2>
-      <p>Nos dedicamos a ofrecer asesoría legal empresarial, coorporativo y litigios. Igualmente brindamos nuestro apoyo con juicios civiles, mercantiles, familiares, penales laborales y fiscales; sin embargo lo que nos diferencia de los demás es nuestra búsqueda continua de soluciones alternas a problemas legales.</p>
+      <h2> ¿Quienes somos? y ¿Qué hacemos?</h2>
+      <p>Somos un equipo de abogados especialistas comprometidos con la búsqueda de soluciones efectivas a los problemas legales de nuestros clientes, su tranquilidad, confianza y protección patrimonial es nuestro objetivo.  Brindamos consultoría, asesoría legal empresarial  y defensa. 
+      </p>
       <a class="btn btn-outline-light" href=""> Conoce más</a>
     </div>
   </div>
@@ -189,7 +220,7 @@
     </div>
     <div class="row">
       <div class="col text-center">
-        <p>Déjanos tus datos y nosotros nos pondremos en contacto de inmediato contigo. </p>
+        <p>Déjanos tus datos y nosotros nos pondremos en contacto contigo a la brevedad. </p>
       </div>
     </div>
     <div class="row">
@@ -205,7 +236,7 @@
           </div>
           <div class="form-row">
             <div class="form-group col">
-              <textarea name="text" class="form-control form-control-lg" placeholder="Cuentanos tu problema"></textarea>
+              <textarea name="text" class="form-control form-control-lg" placeholder="¿Sobre qué tema requiere asesoría?"></textarea>
             </div>
           </div>
           <div class="form-row">
