--- a/servicios.html
+++ b/servicios.html
@@ -133,7 +133,7 @@
 
               <div class="col-md-4 lg-4 s-12 mb-4">
                 <div class="card">
-                  <img class="card-img-top" src="assets/images/.jpg" alt="Card image cap">
+                  <img class="card-img-top" src="assets/images/Civil.jpg" alt="Card image cap">
                   <div class="card-body">
                     <!-- <div class="badges">
                       <span class="badge badge-warning">JavaScript</span>
